# SQL-ETL-data-warehouse-Inside-Airbnb

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  temp_run_listing_loader.py  temp_run_listing_loader_fixed.py  test.py  test_schema_creation.py
.history/: README_20251020111818.md  README_20251021155145.md  README_20251021155238.md  README_20251021155239.md  README_20251021155248.md  README_20251021155250.md  README_20251021155257.md  README_20251021155304.md  README_20251021155311.md
airbnb_data_warehouse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: database_config.py  settings.py
docs/: README_calendar_loader.md
modules/: __init__.py  data_analyzer.py  data_cleaner.py  data_loader.py  data_loader.py.new  data_validator.py  spark_manager.py
scripts/: _apply_schema.py  calendar_debug_runner.py  calendar_debug_unzip_and_run.py  check_calendar_joinability.py  count_tables.py  db_inspect.py  debug_calendar_match.py  debug_run_calendar_via_loader.py  ensure_mapping_table.py  inspect_dim_listings_columns.py  inspect_table_metadata.py  migrate_dim_hosts_host_id.py  run_calendar_loader_debug.py  run_loader_direct.py  run_one_listing.py  run_sample_calendar.py
scripts/analysis/: db_inspect.py  db_size_check.py  get_date_span.py  query_db.py  sample_ids.py  staging_stats.py
scripts/app/: language_detection.py  run_cleaner.py  run_full_loader.py  run_full_loader_noninteractive.py  run_full_loader_split.py  run_loader_non_interactive.py  run_move_steps.py  run_one_calendar.py
scripts/debug/: check_duplicates.py  (+15 more)
utils/: logger.py  utility.py
(+24 files in other folders)
