# pyproject.toml
[project]
name = "airbnb-data-warehouse"
version = "1.0.0"
description = "ETL Pipeline for Airbnb Data Warehouse"
dependencies = [
    "pandas",
    "pyspark", 
    "numpy",
    "pyarrow",
    "python-dateutil",
    "pyodbc",
    "langdetect", # Added langdetect
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["config", "modules", "utils"]